workload/applications/mockers/presentation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presentation
  namespace: elysium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: presentation
  template:
    metadata:
      labels:
        app: presentation
    spec:
      containers:
        - name: presentation
          image: yumikokawaii/presentation:latest
          ports:
            - containerPort: 80
            - containerPort: 443
