workload/applications/mockers/presentation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentation
  namespace: elysium
spec:
  type: ClusterIP
  selector:
    app: presentation
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: grpc
      protocol: TCP
      port: 443
      targetPort: 443
