workload/applications/mockers/presentation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presentation-ingress
  namespace: elysium
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: presentation
                port:
                  number: 30080
